--- a/ansible/roles/pgsql/tasks/main.yml
+++ b/ansible/roles/pgsql/tasks/main.yml
@@ -35,6 +35,7 @@
     password: '{{ pgsql.password }}'
     db: '{{ pgsql.database }}'
     priv: ALL
+    role_attr_flags: SUPERUSER
 
 - name: Set authentication config
   template: src={{ pgsql.auth_template }} dest=/etc/postgresql/9.4/main/pg_hba.conf
